<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group
        android:checkableBehavior="single">

        <item
            android:id="@+id/menu_setting_lunch"
            android:icon="@drawable/ic_baseline_restaurant_menu_24"
            android:title="@string/menu_setting_your_lunch"/>

        <item
            android:id="@+id/menu_setting_settings"
            android:icon="@drawable/ic_baseline_settings_24"
            android:title="@string/menu_setting_settings"/>


        <item
            android:id="@+id/menu_setting_logout"
            android:icon="@drawable/ic_baseline_power_settings_new_24"
            android:title="@string/menu_setting_logout"/>

    </group>

</menu>