<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="view.chatWorkmate.ChatActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/chat_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        app:layout_collapseMode="pin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:popupTheme="@style/AppTheme.PopupOverlay"
        android:background="@color/colorPrimary"
        app:title="@string/title_workmates"
        app:titleTextColor="@color/colorAccentWhite"/>

    <!-- RECYCLER VIEW CONTAINER -->
    <LinearLayout
        android:id="@+id/chat_recycler_view_container"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_above="@id/chat_add_message_container"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/chat_add_message_container"
        app:layout_constraintTop_toBottomOf="@+id/chat_toolbar">

        <!-- MESSAGE RECYCLER VIEW EMPTY -->
        <TextView
            android:id="@+id/chat_text_view_recycler_view_empty"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/default_large_margin"
            android:text="@string/chat_message_error_tv"
            android:textAlignment="center" />

        <!-- RECYCLER VIEW -->
        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/chat_recycler_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:context=".view.chatWorkmate.ChatActivity"
            tools:listitem="@layout/chat_item" />

    </LinearLayout>

    <!-- IMAGE CHOSEN PREVIEW -->
    <ImageView
        android:id="@+id/chat_image_chosen_preview"
        android:layout_width="50dip"
        android:layout_height="50dip"
        android:layout_above="@id/chat_add_message_container"
        android:layout_margin="@dimen/default_margin"
        android:contentDescription="@string/description_preview_image_chosen"
        app:layout_constraintBottom_toTopOf="@+id/chat_add_message_container"
        app:layout_constraintStart_toStartOf="parent" />

    <!-- ADD MESSAGE CONTAINER -->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/chat_add_message_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_margin="@dimen/default_margin"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <!-- ADD FILE BUTTON -->
        <ImageView
            android:id="@+id/chat_add_file_btn"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:adjustViewBounds="true"
            android:contentDescription="@string/description_file_btn"
            android:src="@drawable/ic_baseline_add_circle_24"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <!-- TEXT MESSAGE EDIT TEXT -->
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/chat_text_input"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_weight="1"
            android:hint="@string/chat_message_editTx"
            android:imeOptions="actionDone"
            android:inputType="textMultiLine"
            android:textSize="@dimen/default_text_size"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/chat_send_btn"
            app:layout_constraintStart_toEndOf="@+id/chat_add_file_btn"
            app:layout_constraintTop_toTopOf="parent" />

        <!-- ADD MESSAGE BUTTON -->
        <ImageView
            android:id="@+id/chat_send_btn"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:contentDescription="@string/description_send_btn"
            android:src="@drawable/ic_baseline_send_24"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.constraintlayout.widget.ConstraintLayout>