<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".view.detailRestaurant.DetailRestaurantActivity"
    tools:showIn="@layout/detail_restaurant_activity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <androidx.cardview.widget.CardView
            android:id="@+id/cardView2"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:backgroundTint="@color/colorPrimary"
            android:elevation="@dimen/elevation_CardView"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="UnusedAttribute">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/detail_name_restaurant"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="24dp"
                    android:layout_marginTop="16dp"
                    android:text="@string/tilte_restaurant"
                    android:textColor="@color/colorAccentWhite"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <ImageView
                    android:id="@+id/detail_star_like"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginEnd="24dp"
                    android:contentDescription="@string/description_star_iv"
                    android:src="@drawable/ic_star"
                    app:layout_constraintBottom_toBottomOf="@+id/detail_name_restaurant"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toEndOf="@+id/detail_name_restaurant"
                    app:layout_constraintTop_toTopOf="@+id/detail_name_restaurant" />

                <TextView
                    android:id="@+id/detail_address_restaurant"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="24dp"
                    android:layout_marginBottom="16dp"
                    android:text="@string/detail_address_restaurant_tv"
                    android:textColor="@color/colorAccentWhite"
                    android:textSize="14sp"
                    android:textStyle="italic"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="@+id/detail_name_restaurant"
                    app:layout_constraintTop_toBottomOf="@+id/detail_name_restaurant"
                    app:layout_constraintVertical_bias="1.0" />

            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/cardView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_constraintEnd_toEndOf="@+id/cardView2"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/cardView2">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView
                    android:id="@+id/detail_phone_btn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:contentDescription="@string/description_phone_iv"
                    android:src="@drawable/ic_baseline_local_phone_24"
                    app:layout_constraintEnd_toStartOf="@+id/detail_like_btn"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/detail_phone_txt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:text="@string/detail_call_tv"
                    android:textColor="@color/colorPrimary"
                    app:layout_constraintEnd_toEndOf="@+id/detail_phone_btn"
                    app:layout_constraintStart_toStartOf="@+id/detail_phone_btn"
                    app:layout_constraintTop_toBottomOf="@+id/detail_phone_btn" />

                <ImageView
                    android:id="@+id/detail_like_btn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/description_star_iv"
                    android:src="@drawable/ic_baseline_star_24"
                    app:layout_constraintBottom_toBottomOf="@+id/detail_phone_btn"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="@+id/detail_phone_btn" />

                <TextView
                    android:id="@+id/detail_like_txt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:layout_marginBottom="8dp"
                    android:text="@string/detail_like_tv"
                    android:textColor="@color/colorPrimary"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="@+id/detail_like_btn"
                    app:layout_constraintStart_toStartOf="@+id/detail_like_btn"
                    app:layout_constraintTop_toBottomOf="@+id/detail_like_btn" />

                <ImageView
                    android:id="@+id/detail_web_btn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/description_earth_iv"
                    android:src="@drawable/ic_baseline_public_24"
                    app:layout_constraintBottom_toBottomOf="@+id/detail_like_btn"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/detail_like_btn"
                    app:layout_constraintTop_toTopOf="@+id/detail_like_btn" />

                <TextView
                    android:id="@+id/detail_web_txt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:text="@string/detail_web_tv"
                    android:textColor="@color/colorPrimary"
                    app:layout_constraintEnd_toEndOf="@+id/detail_web_btn"
                    app:layout_constraintStart_toStartOf="@+id/detail_web_btn"
                    app:layout_constraintTop_toBottomOf="@+id/detail_web_btn" />


            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.cardview.widget.CardView>


        <LinearLayout
            android:id="@+id/detail_recycler_view_container"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:orientation="vertical"
            app:layout_constraintTop_toBottomOf="@+id/cardView">

            <!-- MESSAGE RECYCLER VIEW EMPTY -->
            <TextView
                android:id="@+id/detail_text_view_recycler_view_empty"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/default_large_margin"
                android:text="@string/detail_message_error"
                android:textAlignment="center" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/detail_recycler_view_workmates"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:layoutManager="LinearLayoutManager"
                tools:context=".view.detailRestaurant.DetailRestaurantActivity"
                tools:listitem="@layout/detail_restaurant_workmate_item" />

        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>