<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/nav_header"
    android:layout_width="match_parent"
    android:layout_height="176dp"
    android:background="@drawable/lunch">

    <TextView
        android:id="@+id/nav_header_title_txt"
        style="@style/Menu_setting"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/app_name"
        android:textSize="@dimen/menu_setting_title"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/nav_header_image_view"
        android:layout_width="64dp"
        android:layout_height="64dp"
        android:src="@drawable/ic_baseline_person_outline_24"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/nav_header_title_txt"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="32dp"
        android:layout_marginTop="32dp"
        android:layout_marginStart="16dp"
        android:contentDescription="@null" />

    <TextView
        android:id="@+id/nav_header_name_txt"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textAllCaps="false"
        android:layout_marginTop="8dp"
        app:layout_constraintStart_toEndOf="@id/nav_header_image_view"
        app:layout_constraintTop_toTopOf="@id/nav_header_image_view"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        style="@style/Menu_setting"
        android:textSize="@dimen/menu_setting_name"
        android:text="@string/menu_setting_name"/>

    <TextView
        android:id="@+id/nav_header_email_txt"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textAllCaps="false"
        app:layout_constraintTop_toBottomOf="@id/nav_header_name_txt"
        app:layout_constraintStart_toStartOf="@id/nav_header_name_txt"
        app:layout_constraintEnd_toEndOf="@id/nav_header_name_txt"
        style="@style/Menu_setting"
        android:textStyle="normal"
        android:textSize="@dimen/menu_setting_email"
        android:text="@string/menu_setting_email"/>


</androidx.constraintlayout.widget.ConstraintLayout>